# sendmail-tls

./: INSTALL  Makefile.in  README.md  config.h.in  configure  configure.in  myssl.cnf  sendmail-tls.c  sendmail-tls.h
